; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_statecheckid1cb.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___dvd_statecheckid1cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__dvd_ready = common dso_local global i32 0, align 4
@__dvd_diskID = common dso_local global i32 0, align 4
@__dvd_tmpid0 = common dso_local global i32 0, align 4
@DVD_DISKIDSIZE = common dso_local global i32 0, align 4
@__dvd_wait_queue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @__dvd_statecheckid1cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__dvd_statecheckid1cb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 1, i32* @__dvd_ready, align 4
  %3 = load i32, i32* @__dvd_diskID, align 4
  %4 = load i32, i32* @DVD_DISKIDSIZE, align 4
  %5 = call i64 @memcmp(i32 %3, i32* @__dvd_tmpid0, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @__dvd_diskID, align 4
  %9 = load i32, i32* @DVD_DISKIDSIZE, align 4
  %10 = call i32 @memcpy(i32 %8, i32* @__dvd_tmpid0, i32 %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @__dvd_wait_queue, align 4
  %13 = call i32 @LWP_ThreadBroadcast(i32 %12)
  ret void
}

declare dso_local i64 @memcmp(i32, i32*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @LWP_ThreadBroadcast(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
